Update src/test/java/gmail/taras/shevchuk0024/lesson37_Collections/NumberUtilsTest.java
Co-authored-by: Mykola Digtiar <mykola.digtiar@gmail.com>